Thu Feb  5 19:53:47 GMT  2015  Lee Noar  <leenoar@sky.com>

	* include/sys/mman.h: Replace use of __caddr_t with void *.
	A number of autobuilder projects require changes due to the
	use of __caddr_t in relation to the mmap family of functions
	(especially when they're written in C++). Some research shows
	that in this context the use of __caddr_t is "old fashioned"
	and that void * is now standard.
	* sys/mman.c: Follow above change.

Thu Feb  5 19:33:01 GMT  2015  Lee Noar  <leenoar@sky.com>

	* gcccompat/atomics.c: Implement various atomic/sync functions.
	I've disabled the pthread interrupt around these operations,
	but I'm not sure if that's the correct thing to do, or if it's
	even necessary. These operations are purely arithmetic with no
	system calls. As I understand it, a pthread context switch only
	occurs when exiting operating system code.
	* Makefile.am: Add above file to list of Unixlib source.

Wed Jan 21 13:51:23 GMT  2015  Lee Noar  <leenoar@sky.com>

	* gcccompat/galloca.c(__llvm_alloca_save): Create strong
	alias to __gcc_alloca_save.
	(__llvm_alloca): Create strong alias to __gcc_alloca.
	(__llvm_alloca_restore): Wrapper for __gcc_alloca_restore.
	llvm generates code that only passes the block id, whereas
	__gcc_alloca_restore also requires a frame pointer.

Tue Jan 20 20:46:45 GMT  2015  Lee Noar  <leenoar@sky.com>

	* incl-local/stdlib.h(__atexit_function_array): Convert
	to array of __atexit_function_entry so that we can support
	__cxa_atexit.
	* stdlib/atexit.c(__cxa_atexit): Add.
	(atexit): Implement using __cxa_atexit.
	* unix/unix.c(exit): Follow changes above.

Sun Nov 23 14:53:00 GMT  2014  Lee Noar  <leenoar@sky.com>

	* pthread/cancel.c(__pthread_pull_gthr_weak): Remove. We
	now disable weak pthread symbols when building libstdc++
	as static.

Mon Jul  7 19:33:00 BST  2014  Lee Noar  <leenoar@sky.com>

	* signal/post.c(extract_name): Return whether the function name
	was demangled.